Add - Footer temp UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<app-navbar></app-navbar>
+<div>
+  <!-- Nav Bar -->
+  <app-navbar></app-navbar>
+
+  <!-- Routed views -->
+  <div class="main-view">
+    <router-outlet></router-outlet>
+  </div>
+
+  <!-- Footer -->
+  <app-footer></app-footer>
+</div>
