--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span class="app_title">Online Class Scheduler</span>
+      <a [href]="'/'" class="app_title">{{ "app_title" | translate }}</a>
       <span class="example-spacer"></span>
-      <button class="profile_nav_title" mat-button [matMenuTriggerFor]="profileMenu">Profile</button>
+      <button class="profile_nav_title" mat-button [matMenuTriggerFor]="profileMenu">{{"gen_profile" | translate}}</button>
       <mat-menu #profileMenu="matMenu">
-        <button mat-menu-item (click)="openSettingsDialog()">
+        <a mat-menu-item [href]="'/settings'">
           <mat-icon>settings</mat-icon>
-          <span>Settings</span>
-        </button>
+          <span>{{ 'gen_settings' | translate }}</span>
+        </a>
         <button mat-menu-item>
           <mat-icon>palette</mat-icon>
-          <span>Switch Theme</span>
+          <span>{{ 'gen_switch_theme' | translate }}</span>
         </button>
         <button mat-menu-item>
           <mat-icon>exit_to_app</mat-icon>
-          <span>Log Out</span>
+          <span>{{ 'gen_logout' | translate }}</span>
         </button>
       </mat-menu>
     </mat-toolbar-row>
