--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -8,6 +8,8 @@
 
       .app_title {
         font-size: 1vw;
+        text-decoration: none;
+        color: white;
 
         &:hover {
           cursor: pointer;
