Login - Register Part 1

--- a/src/app/routes/user/login/login.component.html
+++ b/src/app/routes/user/login/login.component.html
@@ -1,1 +1,10 @@
-<p>login works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center text-style">{{ "gen_welcome" | translate }}</h1>
+
+            <!-- Login Form -->
+            <div class="form-group login-form"></div>
+        </div>
+    </div>
+</div>
