--- a/src/app/routes/user/login/login.component.html
+++ b/src/app/routes/user/login/login.component.html
@@ -4,7 +4,33 @@
             <h1 class="text-center text-style">{{ "gen_welcome" | translate }}</h1>
 
             <!-- Login Form -->
-            <div class="form-group login-form"></div>
+            <div class="form-group login-form" [formGroup]="loginGroup">
+                <mat-form-field class="form-element" appearance="fill">
+                    <mat-label>{{ "gen_email" | translate }}</mat-label>
+                    <input matInput formControlName="email" type="email" placeholder="{{ 'gen_email' | translate }}">
+                    <!-- <mat-error *ngIf="loginGroup.controls.email.errors?.required">{{ "gen_required" | translate }}</mat-error>
+                    <mat-error *ngIf="loginGroup.controls.email.errors?.pattern">{{ "gen_invalid_email" | translate }}</mat-error> -->
+                </mat-form-field>
+
+                <mat-form-field class="form-element" appearance="fill">
+                    <mat-label>{{ "gen_password" | translate }}</mat-label>
+                    <input matInput formControlName="password" type="password" placeholder="{{ 'gen_password' | translate }}">
+                    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    <!-- <mat-error *ngIf="loginGroup.controls.password.errors?.required">{{'error_required_error' | translate}}</mat-error> -->
+                </mat-form-field>
+
+
+                <button class="button" (click)="login()" [disabled]="loginGroup.status == 'INVALID'">
+                    <i class="pr-1 fa fa-sign-in-alt"></i>
+                    {{'gen_login' | translate}}
+                </button>
+
+                <!-- Register -->
+                <p class="pt-3">
+                    {{'register_msg' | translate}}
+                    <a class="pl-2 clr-theme" href="/register">{{'register_btn' | translate}}</a>
+                </p>
+            </div>
         </div>
     </div>
 </div>
