Add - Sidebar core functionality, Todo - Sidebar items and UI

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,7 @@
-<div class="sidebar" *ngIf="isOpen">
-    <!-- Sidebar content here -->
-  </div>
+<!-- In sidebar.component.html -->
+<div class="sidebar" [class.open]="isOpen">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Explicabo esse quaerat vel sapiente. Dolorem, eos magnam adipisci 
+    illum aut alias praesentium, esse ea ab, maxime velit. Deleniti nulla ipsam quos.
+  </p>
+</div>
