--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div>
   <!-- Nav Bar -->
   <app-navbar></app-navbar>
-
+  <app-sidebar></app-sidebar>
+  
   <!-- Routed views -->
   <div class="main-view">
     <router-outlet></router-outlet>
