--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <!-- Sandwich Button for Sidebar -->
-    <button class="profile_nav_title sandwich_button" mat-button (click)="toggleSidebar()">
+    <!-- Add this button in your navbar component -->
+    <button (click)="toggleSidebar()">
       <mat-icon>menu</mat-icon>
     </button>
-    
+
     <a [href]="'/'" class="app_title">{{ "app_title" | translate }}</a>
     <span class="example-spacer"></span>
     <button class="profile_nav_title" mat-button [matMenuTriggerFor]="profileMenu">{{"gen_profile" | translate}}</button>
