--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -1,7 +1,11 @@
+/* In sidebar.component.css */
 .sidebar {
-  width: 250px;
   position: fixed;
-  height: 100%;
-  background-color: #f4f4f4;
-  /* Add more styles as needed */
+  left: -250px; /* Adjust width as needed */
+  width: 250px; /* Adjust width as needed */
+  transition: left 0.3s;
+}
+
+.sidebar.open {
+  left: 0;
 }
