Add - Hamburger button to open the sidebar, Replace - Profiles dropdown menu with just the settings button

--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -1,9 +1,12 @@
-/* In sidebar.component.css */
 .sidebar {
   position: fixed;
-  left: -250px; /* Adjust width as needed */
-  width: 250px; /* Adjust width as needed */
+  top: 64px;
+  left: -250px;
+  width: 250px;
   transition: left 0.3s;
+  background-color: rgba(50,54,60,255);
+  color: rgba(122,116,133,255);
+  z-index: 5;
 }
 
 .sidebar.open {
