--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,26 +1,24 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <!-- Add this button in your navbar component -->
-    <button (click)="toggleSidebar()">
-      <mat-icon>menu</mat-icon>
-    </button>
 
+    <!-- Sidebar toggle button -->
+    <button class="sidebar-button" (click)="toggleSidebar()">
+      <span class="hamburger-icon">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </span>
+    </button>
+    
+    <!-- App Title -->
     <a [href]="'/'" class="app_title">{{ "app_title" | translate }}</a>
-    <span class="example-spacer"></span>
-    <button class="profile_nav_title" mat-button [matMenuTriggerFor]="profileMenu">{{"gen_profile" | translate}}</button>
-    <mat-menu #profileMenu="matMenu">
-      <a mat-menu-item [href]="'/settings'">
-        <mat-icon>settings</mat-icon>
-        <span>{{ 'gen_settings' | translate }}</span>
-      </a>
-      <button mat-menu-item>
-        <mat-icon>palette</mat-icon>
-        <span>{{ 'gen_switch_theme' | translate }}</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>exit_to_app</mat-icon>
-        <span>{{ 'gen_logout' | translate }}</span>
-      </button>
-    </mat-menu>
+
+    <span class="spacer"></span>
+
+    <!-- Settings -->
+    <a class="nav-settings-btn" [href]="'/settings'">
+      <mat-icon>settings</mat-icon>
+    </a>
+
   </mat-toolbar-row>
 </mat-toolbar>
