--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -1,31 +1,77 @@
-.example-spacer {
-    flex: 1 1 auto;
-  }
-  
-  mat-toolbar {
-    .mat-toolbar-row {
-      justify-content: space-between;
 
-      .app_title {
-        font-size: 1vw;
-        text-decoration: none;
-        color: white;
+mat-toolbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  
+  .mat-toolbar-row {
+    justify-content: space-between;
+    
+    .sidebar-button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 10px;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .hamburger-icon {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
 
         &:hover {
-          cursor: pointer;
+          .hamburger-line:nth-child(1), .hamburger-line:nth-child(2), .hamburger-line:nth-child(3) {
+            background: rgba(255, 255, 255, 0.1);
+          }
         }
-      }
+        .hamburger-line {
+          height: 3px; /*Adjust to change the thickness of the lines */
+          background: #fff;
+          position: absolute;
+          left: 0;
+          width: 100%;
+          border-radius: 3px;
+          transition: 0.4s;
+          
+          &:not(:last-child) {
+            margin-bottom: 5px;
+          }
 
-      .profile_nav_title {
-        font-size: 1vw;
+        }
+        
+        .hamburger-line:nth-child(1) { top: 0; }
+        .hamburger-line:nth-child(2) { top: 8px; }
+        .hamburger-line:nth-child(3) { top: 16px; }
+      }
+    }
+
+    .spacer {
+      flex: 1 1 auto;
+    }
+
+    .nav-settings-btn {
+      color: white;
+
+      &:hover {
+        cursor: pointer;
+        color: #f0f0f0;
+      }
+    }
+
+    .app_title {
+      font-size: 1vw;
+      text-decoration: none;
+      color: white;
+
+      &:hover {
+        cursor: pointer;
       }
     }
   }
-  
-  /* For icons inside mat-menu-item */
-  mat-menu {
-    button mat-icon {
-      margin-right: 0.420vw;
-    }
-  }
-  
+}
