--- a/src/app/routes/settings/settings.component.less
+++ b/src/app/routes/settings/settings.component.less
@@ -1,12 +1,65 @@
-.settings-container{
-    padding-top   : 9.375vw;
-    padding-bottom: 5rem;
-
-    // background           : url("../../../assets/images/background.jpg") no-repeat;
-    background-size      : cover;
+.settings-container {
+    padding: 2rem 6vw;
+    background-size: cover;
     background-attachment: fixed;
-    width                : 100%;
-    min-height           : 100vh;
+    min-height: 100vh;
+    margin-top: 10vh;
+}
 
+.settings-title {
+    font-size: 2vw;
+    color: black;
+}
 
+.settings-second-title {
+    font-size: 1vw;
+    color: #b3b4bc;
+    margin-bottom: 2rem; /* Add some space before the cards */
+}
+
+.setting-card {
+    margin-bottom: 1rem;
+}
+
+.card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background: white;
+    padding: 1rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-icon {
+    font-size: 2rem;
+    color: #007bff;
+}
+
+.card-body {
+    padding: 1rem;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    color: #333;
+}
+
+.card-text {
+    font-size: 0.9rem;
+    color: #666;
+}
+
+.card-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.card-button:hover {
+    background-color: #0056b3;
 }
