Add - Sidebar items dynamically

--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -7,8 +7,29 @@
   background-color: rgba(50,54,60,255);
   color: rgba(122,116,133,255);
   z-index: 5;
+  height: 100vh;
 }
 
 .sidebar.open {
   left: 0;
 }
+
+// .sidebar-overlay {
+//   width              : 100vw;
+//   height             : 100vh;
+//   position           : fixed;
+//   top                : 0;
+//   z-index            : -1;
+//   // background-color: rgba(0, 0, 0, 0.7);
+//   opacity            : 0;
+//   transition         : opacity 500ms ease 0s;
+// }
+
+// .item-style {
+//   position     : absolute;
+//   display      : inline-block;
+//   width        : 315px;
+//   white-space  : nowrap;
+//   overflow     : hidden !important;
+//   text-overflow: ellipsis;
+// }
