--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,15 +1,18 @@
 <!-- In sidebar.component.html -->
 <div class="sidebar" [class.open]="isOpen">
-  <div class="sidebar-items">
-    <!-- <div class="sidebar-item" *ngFor="let item of items">
-      <a [routerLink]="item.route" routerLinkActive="active">
-        <mat-icon>{{ item.icon }}</mat-icon>
-        <span>{{ item.name | translate }}</span>
-      </a>
-    </div> -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eum? Assumenda reprehenderit vero doloribus? Quae voluptate placeat tempora maiores id quibusdam atque, quam distinctio non ad ea porro repellendus commodi!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officiis cupiditate labore mollitia consequatur voluptas, quam delectus eius aut quos tempore dignissimos dolor similique tenetur est accusamus repudiandae corporis cumque!</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus natus iure illum! Dolor dicta veritatis accusamus inventore quo? In blanditiis necessitatibus voluptatibus maxime eaque culpa quod reprehenderit iure quia nihil?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis quas facilis reiciendis sint id repellat molestias? Earum ducimus quia ut, dolores natus voluptate minima veritatis facilis nemo magni praesentium eveniet!</p>
+
+  <!-- Sidebar Overlay -->
+  <div class="d-none sidebar-overlay" focus-element="navigationService.closeSidebar()" type="'SIDEBAR_CLOSE'"
+        layer="400">
   </div>
+
+  <!-- Sidebar Main Items -->
+  <div class="sidebar-items" *ngFor="let item of items"
+   >
+  <i [ngClass]="item.icon"></i>
+  <h3 class="item-style">
+    {{ item.label }}
+  </h3>
+  </div>
+
 </div>
