--- a/src/app/routes/settings/settings.component.html
+++ b/src/app/routes/settings/settings.component.html
@@ -43,5 +43,38 @@
                 </div>
             </div>
         </div>
+        <!-- test  -->
+        <div class="col-md-4 setting-card">
+            <div class="card">
+                <i class="card-icon fa fa-lock"></i>
+                <div class="card-body">
+                    <h5 class="card-title">{{ "change_password" | translate }}</h5>
+                    <p class="card-text">Test</p>
+                    <button class="card-button">{{ "gen_select" | translate }}</button>
+                </div>
+            </div>
+        </div>
+        <!-- test  -->
+        <div class="col-md-4 setting-card">
+            <div class="card">
+                <i class="card-icon fa fa-lock"></i>
+                <div class="card-body">
+                    <h5 class="card-title">{{ "change_password" | translate }}</h5>
+                    <p class="card-text">Test</p>
+                    <button class="card-button">{{ "gen_select" | translate }}</button>
+                </div>
+            </div>
+        </div>
+        <!-- test  -->
+        <div class="col-md-4 setting-card">
+            <div class="card">
+                <i class="card-icon fa fa-lock"></i>
+                <div class="card-body">
+                    <h5 class="card-title">{{ "change_password" | translate }}</h5>
+                    <p class="card-text">Test</p>
+                    <button class="card-button">{{ "gen_select" | translate }}</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
