Fix - Sidebar items allignment

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <h3 class="item-style">
       {{ item.label }}
     </h3>
-    <p class="fas fa-user h2">dd</p>
+    <!-- <p class="fas fa-user h2">dd</p> -->
   </div>
 
 </div>
