--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -14,6 +14,23 @@
   left: 0;
 }
 
+.sidebar-items {
+  padding-top: 10px;
+}
+
+.item-style {
+  padding      : 10px 20px 10px 5px;
+  position     : absolute;
+  display      : inline;
+  width        : 200px;
+  white-space  : nowrap;
+  overflow     : hidden !important;
+  text-overflow: ellipsis;
+}
+
+i {
+  padding      : 10px 20px;
+}
 // .sidebar-overlay {
 //   width              : 100vw;
 //   height             : 100vh;
@@ -23,13 +40,4 @@
 //   // background-color: rgba(0, 0, 0, 0.7);
 //   opacity            : 0;
 //   transition         : opacity 500ms ease 0s;
-// }
-
-// .item-style {
-//   position     : absolute;
-//   display      : inline-block;
-//   width        : 315px;
-//   white-space  : nowrap;
-//   overflow     : hidden !important;
-//   text-overflow: ellipsis;
 // }
