--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,8 @@
-<!-- In sidebar.component.html -->
+
 <div class="sidebar" [class.open]="isOpen">
 
-  <!-- Sidebar Overlay -->
-  <div class="d-none sidebar-overlay" focus-element="navigationService.closeSidebar()" type="'SIDEBAR_CLOSE'">
-  </div>
-
   <!-- Sidebar Main Items -->
-  <div class="sidebar-items" *ngFor="let item of items">
+  <div class="sidebar-items" *ngFor="let item of items" (click)="changeLocation(item.location)">
     <i [ngClass]="item.icon"></i>
     <h3 class="item-style">
       {{ item.label }}
@@ -14,4 +10,15 @@
     <!-- <p class="fas fa-user h2">dd</p> -->
   </div>
 
+  <!-- Sidebar Bottom Items -->
+  <div class="sidebar-bottom-items" *ngFor="let bottomItem of bottomItems">
+    <i [ngClass]="bottomItem.icon"></i>
+    <h3 class="item-style">
+      {{ bottomItem.label }}
+    </h3>
+  </div>
+
 </div>
+
+  <!-- Sidebar Overlay -->
+  <div *ngIf="isOpen" class="sidebar-overlay" (click)="toggleSidebar()"></div>
