--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -6,7 +6,7 @@
   transition: left 0.3s;
   background-color: rgba(50,54,60,255);
   color: rgba(122,116,133,255);
-  z-index: 5;
+  z-index: 1000;
   height: 100vh;
 }
 
@@ -16,6 +16,11 @@
 
 .sidebar-items {
   padding-top: 10px;
+
+  &:hover {
+    background-color: rgba(0,0,0,0.1);
+    cursor: pointer;
+  }
 }
 
 .item-style {
@@ -31,13 +36,13 @@
 i {
   padding      : 10px 20px;
 }
-// .sidebar-overlay {
-//   width              : 100vw;
-//   height             : 100vh;
-//   position           : fixed;
-//   top                : 0;
-//   z-index            : -1;
-//   // background-color: rgba(0, 0, 0, 0.7);
-//   opacity            : 0;
-//   transition         : opacity 500ms ease 0s;
-// }
+
+.sidebar-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+
