UI - Change UI color, change sidebar items font,allignment

--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -4,6 +4,7 @@ mat-toolbar {
   left: 0;
   right: 0;
   z-index: 10;
+  background-color: rgb(34, 40, 49);
 
   .mat-toolbar-row {
     justify-content: space-between;
