--- a/src/app/routes/settings/settings.component.less
+++ b/src/app/routes/settings/settings.component.less
@@ -8,12 +8,12 @@
 
 .settings-title {
     font-size: 2vw;
-    color: black;
+    color: #222831;
 }
 
 .settings-second-title {
     font-size: 1vw;
-    color: #b3b4bc;
+    color: #393E46;
     margin-bottom: 2rem; /* Add some space before the cards */
 }
 
@@ -22,19 +22,21 @@
 }
 
 .card {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    // box-shadow: 0 4px 8px #222831;
     border-radius: 10px;
-    background: white;
+    background: #EEEEEE;
     padding: 1rem;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-color: #00ADB5;
 }
 
 .card-icon {
     font-size: 2rem;
-    color: #007bff;
+    color: #00ADB5;
+    padding-left: 1rem;
 }
 
 .card-body {
@@ -43,17 +45,17 @@
 
 .card-title {
     font-size: 1.25rem;
-    color: #333;
+    color: #393E46;
 }
 
 .card-text {
     font-size: 0.9rem;
-    color: #666;
+    color: #393E46;
 }
 
 .card-button {
-    background-color: #007bff;
-    color: white;
+    background-color: #222831;
+    color: #EEEEEE;
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 5px;
@@ -61,5 +63,5 @@
 }
 
 .card-button:hover {
-    background-color: #0056b3;
+    background-color: #393E46;
 }
