--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     padding: 20px;
-    background-color: #3F51B5;
+    background-color: #222831;
     color: #fff;
     box-sizing: border-box;
 
@@ -40,7 +40,7 @@
       align-items: center;
 
       mat-icon-button {
-        color: #fff;
+        color: #EEEEEE;
         &:hover {
           background-color: rgba(255, 255, 255, 0.1);
         }
