UI - Change Font

--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -32,14 +32,14 @@
   overflow     : hidden !important;
   text-overflow: ellipsis;
   font-size    : 1rem;
-  left         : 35%;
+  left         : 25%;
 }
 
 i {
   padding      : 10px 20px;
   font-size    : 1.5rem;
   align-items: center;
-  left: 20%;
+  padding-left: 10%;
 }
 
 .sidebar-overlay {
