--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -28,13 +28,13 @@
   overflow: hidden !important;
   text-overflow: ellipsis;
   font-size: 1rem;
-  left: 35%;
+  left: 25%;
 }
 i {
   padding: 10px 20px;
   font-size: 1.5rem;
   align-items: center;
-  left: 20%;
+  padding-left: 10%;
 }
 .sidebar-overlay {
   width: 100vw;
