UI - Minor changes all around

--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -54,12 +54,13 @@ mat-toolbar {
 
       &:hover {
         cursor: pointer;
-        color: #f0f0f0;
+        color: rgba(255, 255, 255, 0.1);
+        transition: 0.4s;
       }
     }
 
     .app_title {
-      font-size: 1vw;
+      font-size: 1.3vw;
       text-decoration: none;
       color: white;
 
