--- a/src/app/dialogs/settings-dialog/settings-dialog.component.less
+++ b/src/app/dialogs/settings-dialog/settings-dialog.component.less
@@ -11,6 +11,7 @@
     text-align: center;
     color: #333;
     margin-bottom: 20px;
+    font-size: 1.2vw;
   }
   
   .form-select {
@@ -37,12 +38,12 @@
   }
   
   .confirm {
-    background-color: #007bff;
+    background-color: #00ADB5;
     color: white;
   }
   
   .cancel {
-    background-color: #6c757d;
+    background-color: #B4B4B8;
     color: white;
   }
   
