--- a/src/app/routes/settings/settings.component.less
+++ b/src/app/routes/settings/settings.component.less
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-color: #00ADB5;
+    border-color: #222831;
 }
 
 .card-icon {
