UI - Login Form UI

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" *ngIf="!isLoginRoute">
     <mat-card class="footer-card">
       <div class="footer-content">
         <div>
