UI - Register Form UI, minor changes in Login form UI

--- a/src/app/routes/user/login/login.component.less
+++ b/src/app/routes/user/login/login.component.less
@@ -29,7 +29,7 @@ body {
 
 /* Header styling */
 .text-style {
-    color: #EEEEEE;
+    color: #00ADB5;
     margin-bottom: 20px;
 }
 
@@ -92,4 +92,10 @@ a:hover {
 
 .register-msg {
     color: #EEEEEE;
+}
+
+.login2-msg {
+    color: #EEEEEE;
+    margin-bottom: 20px;
+    font-size: 1vw;
 }
