--- a/src/app/routes/user/login/login.component.html
+++ b/src/app/routes/user/login/login.component.html
@@ -5,6 +5,7 @@
             <!-- Login Form -->
             <div class="form-group login-form" [formGroup]="loginGroup">
                 <h1 class="text-center text-style">{{ "gen_welcome" | translate }}</h1>
+                <h3 class="text-center login2-msg"> Login to continue</h3>
                 <mat-form-field class="form-element" appearance="fill">
                     <mat-label>{{ "gen_email" | translate }}</mat-label>
                     <input matInput formControlName="email" type="email" placeholder="{{ 'gen_email' | translate }}">
