Sidebar Simple UI part 1

--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -1,7 +1,7 @@
 mat-toolbar {
+  width: 96%;
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   z-index: 10;
   background-color: rgb(34, 40, 49);
@@ -63,6 +63,7 @@ mat-toolbar {
       font-size: 1.3vw;
       text-decoration: none;
       color: white;
+      margin-left: -5%;
 
       &:hover {
         cursor: pointer;
