--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 mat-toolbar {
+  width: 96%;
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   z-index: 10;
   background-color: #222831;
@@ -55,12 +55,14 @@ mat-toolbar .mat-toolbar-row .nav-settings-btn {
 }
 mat-toolbar .mat-toolbar-row .nav-settings-btn:hover {
   cursor: pointer;
-  color: #f0f0f0;
+  color: rgba(255, 255, 255, 0.1);
+  transition: 0.4s;
 }
 mat-toolbar .mat-toolbar-row .app_title {
-  font-size: 1vw;
+  font-size: 1.3vw;
   text-decoration: none;
   color: white;
+  margin-left: -5%;
 }
 mat-toolbar .mat-toolbar-row .app_title:hover {
   cursor: pointer;
