UI - Remove Navbar Simple for now, some more sidebar styling

--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -4,8 +4,8 @@
   left: -250px;
   width: 250px;
   transition: left 0.3s;
-  background-color: #B4B4B8;
-  color: #222831;
+  background-color: #222831;
+  color: #EEEEEE;
   z-index: 1000;
   height: 100vh;
 }
@@ -30,7 +30,7 @@
   margin-top: 85%;
 }
 .sidebar-simple i {
-  color: #fff;
+  color: #EEEEEE;
 }
 .sidebar-items {
   padding-top: 10px;
