--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,14 +20,14 @@
 
 </div>
 
-<div class="sidebar-simple" >
+<!-- <div class="sidebar-simple" >
 
   <div class="sidebar-items" *ngFor="let item of items">
     <i [ngClass]="item.icon"></i>
   </div>
     
 
-</div>
+</div> -->
 
 
 <!-- Sidebar Overlay -->
