--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -4,8 +4,8 @@
   left: -250px;
   width: 250px;
   transition: left 0.3s;
-  background-color: #B4B4B8;
-  color: #222831;
+  background-color: #222831;
+  color: #EEEEEE;
   z-index: 1000;
   height: 100vh;
 }
@@ -34,7 +34,7 @@
     }
 
     i {
-      color: #fff;
+      color: #EEEEEE;
     }
 }
 
