--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,11 +3,11 @@
 
     <!-- Sidebar toggle button -->
     <button class="sidebar-button" (click)="toggleSidebar()">
-      <!-- <span class="hamburger-icon">
+      <span class="hamburger-icon">
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
-      </span> -->
+      </span>
     </button>
     
     <!-- App Title -->
