--- a/src/app/routes/settings/settings.component.css
+++ b/src/app/routes/settings/settings.component.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-attachment: fixed;
   min-height: 100vh;
-  margin-top: 10vh;
+  padding-top: 10vh;
 }
 .settings-title {
   font-size: 2vw;
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-color: #00ADB5;
+  border-color: #222831;
 }
 .card-icon {
   font-size: 2rem;
