--- a/src/app/routes/settings/settings.component.less
+++ b/src/app/routes/settings/settings.component.less
@@ -3,7 +3,7 @@
     background-size: cover;
     background-attachment: fixed;
     min-height: 100vh;
-    margin-top: 10vh;
+    padding-top: 10vh;
 }
 
 .settings-title {
