--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" *ngIf="!isLoginRoute">
   <mat-toolbar-row>
-
+<!-- test -->
     <!-- Sidebar toggle button -->
     <button class="sidebar-button" (click)="toggleSidebar()">
       <span class="hamburger-icon">
