Add - Class Registration Route, Add - Conditional Sidebar Items

--- a/src/app/routes/calendar/calendar.component.html
+++ b/src/app/routes/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div [ngSwitch]="view" class="calendar">
+<div [ngSwitch]="view" class="calendar" *ngIf="features.appointmentsEnabled">
   <mwl-calendar-month-view
     *ngSwitchCase="CalendarView.Month"
     [viewDate]="viewDate"
