--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -40,8 +40,21 @@
   cursor: pointer;
   transition: 0.2s;
 }
+.sidebar-bottom-items {
+  position: absolute;
+  width: 100%;
+  padding-bottom: 15px;
+  color: #EEEEEE;
+  bottom: 8%;
+  align-items: center;
+  padding-top: 10px;
+}
+.sidebar-bottom-items:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: 0.2s;
+}
 .item-style {
-  padding: 10px 20px 10px 5px;
   position: absolute;
   display: inline;
   width: 200px;
@@ -50,9 +63,9 @@
   text-overflow: ellipsis;
   font-size: 1rem;
   left: 25%;
+  padding-top: 3px;
 }
 i {
-  padding: 10px 20px;
   font-size: 1.5rem;
   align-items: center;
   padding-left: 10%;
