--- a/src/app/routes/settings/settings.component.less
+++ b/src/app/routes/settings/settings.component.less
@@ -1,20 +1,20 @@
 .settings-container {
-    padding: 2rem 6vw;
-    background-size: cover;
+    padding              : 2rem 6vw;
+    background-size      : cover;
     background-attachment: fixed;
-    min-height: 100vh;
-    padding-top: 10vh;
+    min-height           : 100vh;
+    padding-top          : 10vh;
 }
 
 .settings-title {
     font-size: 2vw;
-    color: #222831;
+    color    : #222831;
 }
 
 .settings-second-title {
-    font-size: 1vw;
-    color: #393E46;
-    margin-bottom: 2rem; /* Add some space before the cards */
+    font-size    : 1vw;
+    color        : #393E46;
+    margin-bottom: 2rem;
 }
 
 .setting-card {
@@ -22,20 +22,19 @@
 }
 
 .card {
-    // box-shadow: 0 4px 8px #222831;
-    border-radius: 10px;
-    background: #EEEEEE;
-    padding: 1rem;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    border-radius  : 10px;
+    background     : #EEEEEE;
+    padding        : 1rem;
+    height         : 100%;
+    display        : flex;
+    flex-direction : column;
     justify-content: space-between;
-    border-color: #222831;
+    border-color   : #222831;
 }
 
 .card-icon {
-    font-size: 2rem;
-    color: #00ADB5;
+    font-size   : 2rem;
+    color       : #00ADB5;
     padding-left: 1rem;
 }
 
@@ -45,21 +44,21 @@
 
 .card-title {
     font-size: 1.25rem;
-    color: #393E46;
+    color    : #393E46;
 }
 
 .card-text {
     font-size: 0.9rem;
-    color: #393E46;
+    color    : #393E46;
 }
 
 .card-button {
     background-color: #222831;
-    color: #EEEEEE;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
+    color           : #EEEEEE;
+    border          : none;
+    padding         : 0.5rem 1rem;
+    border-radius   : 5px;
+    cursor          : pointer;
 }
 
 .card-button:hover {
